--- a/定位/定位/Info.plist
+++ b/定位/定位/Info.plist
@@ -2,6 +2,12 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>UIBackgroundModes</key>
+	<array>
+		<string>location</string>
+	</array>
+	<key>NSLocationAlwaysUsageDescription</key>
+	<string>总是授权</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
 	<string>使用定位时授权</string>
 	<key>CFBundleDevelopmentRegion</key>
